--- a/index.html
+++ b/index.html
@@ -140,6 +140,58 @@
         </div>
     </div>
 
+    <!-- ... existing code ... -->
+<div class="expenses-form-section">
+    <h2>Add New Expense</h2>
+    <form id="expense-form">
+        <div class="form-group">
+            <label for="expense-name">Expense Name</label>
+            <input type="text" id="expense-name" required>
+        </div>
+        <div class="form-group">
+            <label for="expense-amount">Amount (₹)</label>
+            <input type="number" id="expense-amount" min="1" required>
+        </div>
+        <div class="form-group">
+            <label for="expense-category">Category</label>
+            <select id="expense-category" required>
+                <option value="">Select Category</option>
+                <option value="Food">Food</option>
+                <option value="Transportation">Transportation</option>
+                <option value="Books">Books</option>
+                <option value="Entertainment">Entertainment</option>
+                <option value="Utilities">Utilities</option>
+                <option value="Rent">Rent</option>
+                <option value="Clothing">Clothing</option>
+                <option value="Health">Health</option>
+                <option value="Others">Others</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="expense-date">Date</label>
+            <input type="date" id="expense-date" required>
+        </div>
+        <div class="form-group">
+            <label for="receipt-image">Receipt Image (Optional)</label>
+            <div class="image-upload-container">
+                <input type="file" id="receipt-image" accept="image/*" capture="camera">
+                <div class="upload-preview" id="image-preview">
+                    <p>No image selected</p>
+                </div>
+            </div>
+            <button type="button" id="scan-receipt" class="secondary-btn">
+                <i class="fas fa-search-dollar"></i> Scan Receipt
+            </button>
+        </div>
+        <div class="form-group">
+            <label for="expense-notes">Notes (Optional)</label>
+            <textarea id="expense-notes"></textarea>
+        </div>
+        <button type="submit" class="primary-btn">Add Expense</button>
+    </form>
+</div>
+<!-- ... existing code ... -->
+
     <!-- Modals -->
     <div id="budget-modal" class="modal">
         <div class="modal-content">
