--- a/index.html
+++ b/index.html
@@ -215,8 +215,13 @@
         </div>
     </div>
 
-    
-
+<div id="receipt-modal" class="receipt-modal">
+    <div class="receipt-modal-content">
+        <span class="close-receipt-modal">&times;</span>
+        <img id="receipt-modal-image">
+    </div>
+</div>
+ 
     <script src="script.js"></script>
 </body>
 </html>
